@@ -1555,6 +1555,12 @@ typedef [uuid(D09B9F0E-C1AE-40dd-84D6-B1F74053AA8E)]
         {
                 //[propget, id(DISPID_Name), helpstring("property Name")] HRESULT Name([out, retval] BSTR *pVal);
                 //[propput, id(DISPID_Name), helpstring("property Name")] HRESULT Name([in] BSTR newVal);
+                [id(1), helpstring("method PlayAnim")] HRESULT PlayAnim(int startFrame);
+                [id(2), helpstring("method PlayAnimEndless")] HRESULT PlayAnimEndless();
+                [id(18), helpstring("method StopAnim")] HRESULT StopAnim();
+                [id(19), helpstring("method ShowFrame")] HRESULT ShowFrame(int frame);
+                [id(35), helpstring("method ContinueAnim")] HRESULT ContinueAnim();
+                
                 [propget, id(101), helpstring("property Sides")] HRESULT Sides([out, retval] int *pVal);
                 [propput, id(101), helpstring("property Sides")] HRESULT Sides([in] int newVal);
                 [propget, id(103), helpstring("property Top Visible")] HRESULT Visible([out, retval] VARIANT_BOOL *pVal);
