@@ -1,5 +1,10 @@
 VP 10.2.0 Changelog
 ------------------------
+- animation support for mesh primitives added: The animation sequence is based on multiple .obj files for each frame. Let's say we have an animation of 100 single frames then you have to export
+  each frame into a separate .obj file with the nameing format <meshname>_x.obj where x is the frame number. When importing a mesh check the "Import Animation sequence" in the import dialog and
+  select the .obj file of the first frame. VP will then load all other frames and when done with it will show you a short message box how many frames where imported.
+  Check the CommandReference.txt for the extra animation functions.
+
 - bumper cap, base, ring, skirt can be set to invisible separately
 
 - separate material can be applied to the bumper ring
